--- a/src/main/res/layout/ct_fragment_settings.xml
+++ b/src/main/res/layout/ct_fragment_settings.xml
@@ -16,6 +16,32 @@
         android:textSize="20sp"
         app:fontFamily="sans-serif-medium" />
 
+
+    <LinearLayout
+      android:paddingLeft="16dp"
+      android:paddingRight="16dp"
+      android:paddingTop="8dp"
+      android:paddingBottom="8dp"
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+        <androidx.appcompat.widget.AppCompatTextView
+          android:text="@string/app_version"
+          android:textColor="@color/white"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+        <androidx.appcompat.widget.AppCompatTextView
+          android:id="@+id/tv_sdk_version"
+          android:textSize="16sp"
+          android:text="1.4(1.12)"
+          android:textColor="@color/app_text_color_enabled"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" />
+    </LinearLayout>
+    <View
+      android:background="@color/grey_400"
+      android:layout_width="match_parent"
+      android:layout_height="1dp"/>
     <LinearLayout
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
