--- a/src/main/res/layout/ct_device_settings.xml
+++ b/src/main/res/layout/ct_device_settings.xml
@@ -272,6 +272,40 @@
                     android:background="@android:color/transparent" />
             </LinearLayout>
 
+
+            <LinearLayout
+              android:layout_width="match_parent"
+              android:layout_height="?android:attr/actionBarSize"
+              android:background="@color/appbar_bg"
+              android:gravity="center_vertical">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:gravity="center_vertical"
+                  android:padding="16dp"
+                  android:text="@string/device_serial_number"
+                  android:textSize="16sp"
+                  android:textColor="@color/white"
+                  app:fontFamily="sans-serif" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                  android:id="@+id/txt_serialNumber"
+                  android:layout_width="0dp"
+                  android:layout_height="wrap_content"
+                  android:layout_weight="1"
+                  android:gravity="center_vertical|right"
+                  android:padding="16dp"
+                  android:textSize="16sp"
+                  android:textColor="@color/white"
+                  app:fontFamily="sans-serif-black"
+                  tools:text="HSRIVAARNA3223000012" />
+            </LinearLayout>
+            <View
+              android:layout_width="match_parent"
+              android:layout_height="1dp"
+              android:background="@android:color/transparent" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
