--- a/src/main/res/menu/bottom_navigation_main.xml
+++ b/src/main/res/menu/bottom_navigation_main.xml
@@ -28,7 +28,7 @@
     <item
         android:id="@+id/action_settings"
         android:enabled="true"
-        android:icon="@drawable/settings_unselected"
-        android:title="@string/Settings"
+        android:icon="@drawable/info"
+        android:title="Info"
         app:showAsAction="ifRoom" />
 </menu>
